README: remove genivi 4.0 from version description
* Remove Genivi 4.0 from version description

Signed-off-by: Adrian Alonso <aalonso@freescale.com>

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Freescale's Genivi 4.0 Complaint Yocto BSP
+Freescale's Genivi Complaint Yocto BSP
 ===========================================
 
 Supported boards
