--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Freescale's Genivi Complaint Yocto BSP
+Freescale's Genivi 6.0.2 Complaint Yocto BSP
 ===========================================
 
 Supported boards
